[package]
name = "libwebm"
version = "0.1.0"
authors = ["Rain Liu <yuliu@outlook.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/rainliu/libwebm"
repository = "https://github.com/rainliu/libwebm"
description = "libwebm Native in Rust"

[dependencies]
rand = "0.6.4"
enum-primitive-derive = "0.1.2"
num-traits = "0.2.6"